--- a/src/HmAutoHttpServer/HmAutoHttpServer.vcxproj
+++ b/src/HmAutoHttpServer/HmAutoHttpServer.vcxproj
@@ -140,6 +140,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mongoose.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HmAutoHttpServer.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
