--- a/src/HmAutoHttpServer/HmAutoHttpServer.vcxproj.filters
+++ b/src/HmAutoHttpServer/HmAutoHttpServer.vcxproj.filters
@@ -29,5 +29,13 @@
     <ClInclude Include="mongoose.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HmAutoHttpServer.rc">
+      <Filter>リソース ファイル</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
