--- a/src/HmPunyHttpServer/HmAutoHttpServer.vcxproj.filters
+++ b/src/HmPunyHttpServer/HmAutoHttpServer.vcxproj.filters
@@ -34,7 +34,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="HmAutoHttpServer.rc">
+    <ResourceCompile Include="HmPunyHttpServer.rc">
       <Filter>リソース ファイル</Filter>
     </ResourceCompile>
   </ItemGroup>
