呼び出し元の秀丸が自然クローズではなく、エラーやタスクマネージャから強制的に終了させられたとしても、終わるようにした。

--- a/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj
+++ b/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj
@@ -135,6 +135,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="getport.cpp" />
+    <ClCompile Include="hidemaru_wnd.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mongoose.c" />
   </ItemGroup>
