--- a/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj.filters
+++ b/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="getport.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="hidemaru_wnd.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mongoose.h">
