--- a/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj.filters
+++ b/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj.filters
@@ -24,7 +24,10 @@
     <ClCompile Include="getport.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="hidemaru_wnd.cpp">
+    <ClCompile Include="bindwnd.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="shutdown.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
