元々限りなく大丈夫だとは思われるが一応より安全にするためにセマフォを追加。最大で２秒待ちなので、「一斉によーいどんで10個起動しようとした」ぐらいまでは安全と思われる。

--- a/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj
+++ b/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj
@@ -138,11 +138,13 @@
     <ClCompile Include="bindwnd.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mongoose.c" />
+    <ClCompile Include="semaphore.cpp" />
     <ClCompile Include="shutdown.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mongoose.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="semaphore.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="HmPunyHttpServer.rc" />
