--- a/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj.filters
+++ b/src/HmPunyHttpServer/HmPunyHttpServer.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClCompile Include="shutdown.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="semaphore.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mongoose.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="semaphore.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
